test/compile-fail/resolution/use/no-name-rename/expected.txt
error: unresolved item `b`
 --> top.rhdl:3:7
  |
3 | use a::b as c;
  |        ^ no `b` item in `a`
